--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>会动的简历</title>
 </head>
 <body>
@@ -12,42 +13,7 @@
     <div id="divwrapper">
         <div id="div1"></div>
     </div>
-    <style>
-        *{margin:0;padding:0;box-sizing: border-box;}
-        #demo{
-            word-break: break-all;
-        }
-        #div1{
-            position:fixed;
-            left: 50%;
-            transform: translateX(-50%);
-            top:20px;
-        }
-        #div1::before{
-            content: "";
-            display: block;
-            position: absolute;
-        }
-        #div1::after{
-            content: "";
-            display: block;
-            position: absolute;
-        }
-        @media (max-width: 500px) {
-            #demo{
-                height:50vh;
-                overflow: auto;
-            }
-            #divwrapper{
-                height:50vh;
-            }
-            #div1{
-                position: relative;
-                right:0;
-                top:0;
-            }
-        }
-    </style>
+
     <script src="main.js"></script>
 
 </body>
